--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   sqflite: ^2.0.0+2
   path: ^1.8.0
   path_provider: ^2.0.1
+  web_socket_channel: ^2.0.0
   speech_to_text: ^3.2.0
   avatar_glow: ^2.0.1
 
