--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,15 +17,14 @@ environment:
   sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
-  cloud_firestore:
-
+  cloud_firestore: "^2.0.0"
+  firebase_storage: "^9.0.0"
+  firebase_core: "^1.3.0"
   flutter:
     sdk: flutter
   sqflite: ^2.0.0+2
   path: ^1.8.0
   path_provider: ^2.0.1
-  web_socket_channel: ^2.0.0
-  speech_to_text: ^3.2.0
   avatar_glow: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
