--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,13 @@ dependencies:
   cloud_firestore: "^2.0.0"
   firebase_storage: "^9.0.0"
   firebase_core: "^1.3.0"
+
+  flutter_launcher_icons: "^0.8.0"
+
+  avatar_glow: ^2.0.1
+
   flutter:
     sdk: flutter
-  avatar_glow: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -32,7 +36,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
+flutter_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "lib/Styling/Icons/app_icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
