--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,8 @@ dependencies:
   cloud_firestore: "^2.0.0"
   firebase_storage: "^9.0.0"
   firebase_core: "^1.3.0"
-
+  
+  flutter_spinkit: "^4.1.2"
   flutter_launcher_icons: "^0.8.0"
 
   avatar_glow: ^2.0.1
