--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   cloud_firestore: "^2.0.0"
   firebase_storage: "^9.0.0"
   firebase_core: "^1.3.0"
-  
+
   flutter_spinkit: "^4.1.2"
   flutter_launcher_icons: "^0.8.0"
 
@@ -34,8 +34,13 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  flutter_native_splash: ^0.2.0
   flutter_test:
     sdk: flutter
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: "lib/Styling/Icons/app_icon.png"
 
 flutter_icons:
   android: "launcher_icon"
